# dclaw-flow

./: .env.example  .gitignore  AGENTS.md  README.md  REVISED-PRD.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  flow_test.db  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_webhook_path_index.py  003_execution_status_index.py  004_node_execution_attempt.py  005_users_table.py  006_workflow_owner_fk.py  007_execution_queue.py  008_connections.py
backend/app/: __init__.py  auth.py  config.py  connectors.py  crypto.py  database.py  main.py  models.py  observability.py  ownership.py  ratelimit.py  schemas.py  seed.py  templates.py  webhook_security.py
backend/app/routers/: auth.py  connections.py  copilot.py  executions.py  webhooks.py  workflows.py
backend/app/services/: anomaly.py  copilot.py  engine.py  executor.py  http_action.py  queue.py  retention.py  schema_inference.py
backend/dclaw_flow_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_alerts.py  test_auth.py  test_branching.py  test_config.py  test_connectors.py  test_copilot.py  test_engine.py  test_executions.py  test_fallback.py  test_observability.py  test_owner_scoping.py  test_parallel.py  test_queue.py  test_ratelimit.py  test_retries.py  test_root_cause.py  test_stats.py  test_templates.py  test_webhook_security.py  test_webhooks.py  test_workflows.py
docs/: README.md  meta.json
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
(+57 files in other folders)
